--- a/Frontend/src/main.scss
+++ b/Frontend/src/main.scss
@@ -1,6 +1,3 @@
 @charset "UTF-8";
 @import "~perfect-scrollbar/css/perfect-scrollbar.css";
-@import "./styles/fonts.googleapis.scss";
-@import "./styles/ng-zorro-antd.scss";
-@import "./styles/font-awesome.scss";
-@import "./styles/quill.scss";
+@import "./styles/styles.scss";
