Update default layout

--- a/Frontend/src/main.scss
+++ b/Frontend/src/main.scss
@@ -1,3 +1,5 @@
-@charset "UTF-8";
 @import "~perfect-scrollbar/css/perfect-scrollbar.css";
 @import "./styles/styles.scss";
+.svd_commercial_container {
+  display: none;
+}
